--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div class="nav-container">
     <div class="nav-items">
+
         <ul class="text-navigation">
             <li>
                 ABOUT ME
@@ -32,8 +33,25 @@
 
         <header>
             <div class="text-content">
+
                 <div class="me-image">
-                    <img src="/pict/%253F%253F%253F%253F%253F_%2528%253F%253F%253F%253F%2529%201.png">
+                    <div class = "ascii-hamster">
+                    <pre>
+                    .     .
+                    (>\---/<)
+                    ,'     `.
+                    /  q   p  \
+                    (  >(_Y_)<  )
+                    >-' `-' `-<-.
+                    /  _.== ,=.,- \
+                    /,    )`  '(    )
+                    ; `._.'      `--<
+                    :     \        |  )
+                    \      )       ;_/
+                    `._ _/_  ___.'-\\\
+                    `--\\\
+                    </pre>
+                    </div>
                 </div>
                 <h1>
                     About Me
@@ -45,8 +63,15 @@
                     and back-end programming. Sometimes can work at front-end<br>
                 </p>
                 <h2>
+                    favorite quote
+                </h2>
+                <sub>
+                    <strong>"Veni, vidi, vici"</strong> <footer>Gaius Julius Caesar </footer>
+                </sub>
+                <h2>
                     Achievements
                 </h2>
+
                 <p>
                     -Can work with most of the popular OS’s<br>
                     -Worked with networking and ip technologies<br>
