--- a/index.html
+++ b/index.html
@@ -79,7 +79,23 @@
                     -If needed can quickly learn language of programming in level needed to complete tasks<br>
 
                 </p>
-
+                
+                <h3>
+                    Goods
+                </h3>
+                <p>
+                    -Can binge work if needed -Punctual(mostly)<br>
+                    -Active<br>
+                    -Some times can do something quickly<br>
+                </p>
+                <h3>
+                    Bads
+                </h3>
+                <p>
+                    -Sometime too conservative in my decisions<br>
+                    -Unnsifficient planning<br>
+                    -Prefer speed of development neither the quality<br>
+                </p>
             </div>
         </header>
     </div>
