--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>
+
+    </title>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="/style.css"/>
-</head>
-<body>
-<div class="nav-container">
-    <div class="nav-items">
 
+</head>
+
+
+<body>
+<header>
+    <div class="panel">
         <ul class="text-navigation">
             <li>
                 ABOUT ME
             </li>
             <li>
                 <a style="text-decoration:none" href="second_page.html">WORK EXPERIENCE</a>
-            <li>
+            </li>
             <li>
                 <a style="text-decoration:none" href="third_page.html">MY SKILLS</a>
             </li>
@@ -26,78 +31,79 @@
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
         </div>
     </div>
-</div>
-<script src="main.js"></script>
+</header>
 <div class="text-container">
-    <div class="wrapper">
-
-        <header>
-            <div class="text-content">
-
-                <div class="me-image">
-                    <div class = "ascii-hamster">
+    <div class="text-content">
+        <div class="me-image">
+            <div class="ascii-hamster">
                     <pre>
-                    .     .
-                    (>\---/<)
-                    ,'     `.
-                    /  q   p  \
-                    (  >(_Y_)<  )
-                    >-' `-' `-<-.
-                    /  _.== ,=.,- \
-                    /,    )`  '(    )
-                    ; `._.'      `--<
-                    :     \        |  )
-                    \      )       ;_/
-                    `._ _/_  ___.'-\\\
+.     .
+(>\---/<)
+,'     `.
+/  q   p  \
+(  >(_Y_)<  )
+>-' `-' `-<-.
+/  _.== ,=.,- \
+/,    )`  '(    )
+; `._.'      `--<
+:     \        |  )
+\      )       ;_/
+`._ _/_  ___.'-\\\
                     `--\\\
                     </pre>
-                    </div>
-                </div>
-                <h1>
-                    About Me
-                </h1>
-                <p>
-                    0/ My name is Georgy Gvinepadze, started working in IT sphere since 2016, have experience in<br>
-                    different spheres of programming and system engineering.<br>
-                    Have a fascination with linux, networking<br>
-                    and back-end programming. Sometimes can work at front-end<br>
-                </p>
-                <h2>
-                    favorite quote
-                </h2>
-                <sub>
-                    <strong>"Veni, vidi, vici"</strong> <footer>Gaius Julius Caesar </footer>
-                </sub>
-                <h2>
-                    Achievements
-                </h2>
+            </div>
+        </div>
+        <h1>
+            About Me
+        </h1>
+        <p>
+            My name is Georgy Gvinepadze, started working in IT sphere since 2016, have experience in<br>
+            different spheres of programming and system engineering.<br>
+            Have a fascination with linux, networking<br>
+            and back-end programming. Sometimes can work at front-end<br>
+        </p>
+        <h2>
+            favorite quote
+        </h2>
+        <blockquote>
+            "Veni, vidi, vici" <cite>Gaius Julius Caesar </cite>
+        </blockquote>
+        <h2>
+            Achievements
+        </h2>
 
-                <p>
-                    -Can work with most of the popular OS’s<br>
-                    -Worked with networking and ip technologies<br>
-                    -Created some applications on QT<br>
-                    -If needed can quickly learn language of programming in level needed to complete tasks<br>
+        <p>
+            -Can work with most of the popular OS’s<br>
+            -Worked with networking and ip technologies<br>
+            -Created some applications on QT<br>
+            -If needed can quickly learn language of programming in level needed to complete tasks<br>
 
-                </p>
-                
+        </p>
+        <ul class="data">
+            <li>
                 <h3>
-                    Goods
+                    <a style="color: green"> Goods</a>
                 </h3>
                 <p>
-                    -Can binge work if needed -Punctual(mostly)<br>
+                    -Can binge work if needed <br>
+                    -Punctual(mostly)<br>
                     -Active<br>
                     -Some times can do something quickly<br>
                 </p>
+            </li>
+            <li>
                 <h3>
-                    Bads
+                   <a style="color: red"> Bads</a>
                 </h3>
                 <p>
                     -Sometime too conservative in my decisions<br>
-                    -Unnsifficient planning<br>
+                    -Insufficient planning<br>
                     -Prefer speed of development neither the quality<br>
                 </p>
-            </div>
-        </header>
+            </li>
+
+        </ul>
+
     </div>
 </div>
 </body>
