direct changes in site

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,60 @@
 </header>
 <div class="text-container">
     <div class="text-content">
-        <ul class="textpic">
+        <ul class="about_content">
+
+            <li>
+                <h1>
+                    Обо мне
+                </h1>
+                <p>
+                    Меня зовут Гвинепадзе Георгий Паатаевич, на данный момент являюсь студентом третьего курса
+                    факультета информационных технологий университета <strong>ИТМО</strong>. <br>
+                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных языках.
+                    Также обладаю некоторыми навыки в frontend разработке<br>
+
+                </p>
+                <h2>
+                    favorite quote
+                </h2>
+                <blockquote>
+                    "Veni, vidi, vici" <cite>Gaius Julius Caesar </cite>
+                </blockquote>
+                <h2>
+                    Достижения
+                </h2>
+
+                <p>
+                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>
+                    -Работал с различными сетевыми задачами<br>
+                    -Работал с QT<br>
+                    <br>
+
+                </p>
+                <ul class="data">
+                    <li>
+                        <h3>
+                            <a style="color: green"> Хорошее</a>
+                        </h3>
+                        <p>
+                            -При необходимости могу работать кранчем<br>
+                            -Быстро обучаемый<br>
+                            -Активный<br>
+                            -За два дня освоился с NodeJs в мере достаточной для написания бота<br>
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            <a style="color: red"> Плохое</a>
+                        </h3>
+                        <p>
+                            -Бываю консервативным в своих решениях<br>
+                            -Зачастую <br>
+                            -Зачастую могу пожертвовать качеством ради скорости<br>
+                        </p>
+                    </li>
+                </ul>
+            </li>
             <li>
                 <div class="me-image">
                     <div class="ascii-hamster">
@@ -56,61 +109,8 @@
                     </div>
                 </div>
             </li>
-            <li>
-                <h1>
-                    Обо мне
-                </h1>
-                <p>
-                    Меня зовут Гвинепадзе Георгий Паатаевич, на данный момент являюсь студентом третьего курса
-                    факультета информационных технологий университета <strong>ИТМО</strong>. <br>
-                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных языках.
-                    Также обладаю некоторыми навыки в frontend разработке<br>
-
-                </p>
-            </li>
         </ul>
-            <h2>
-                favorite quote
-            </h2>
-            <blockquote>
-                "Veni, vidi, vici" <cite>Gaius Julius Caesar </cite>
-            </blockquote>
-            <h2>
-                Достижения
-            </h2>
 
-            <p>
-                -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>
-                -Работал с различными сетевыми задачами<br>
-                -Работал с QT<br>
-                <br>
-
-            </p>
-            <ul class="data">
-                <li>
-                    <h3>
-                        <a style="color: green"> Хорошее</a>
-                    </h3>
-                    <p>
-                        -При необходимости могу работать кранчем<br>
-                        -Быстро обучаемый<br>
-                        -Активный<br>
-                        -За два дня освоился с NodeJs в мере достаточной для написания бота<br>
-                    </p>
-                </li>
-                <li>
-                    <h3>
-                        <a style="color: red"> Плохое</a>
-                    </h3>
-                    <p>
-                        -Бываю консервативным в своих решениях<br>
-                        -Зачастую <br>
-                        -Зачастую могу пожертвовать качеством ради скорости<br>
-                    </p>
-                </li>
-
-            </ul>
-        </ul>
     </div>
 </div>
 </body>
