--- a/experience.html
+++ b/experience.html
@@ -50,6 +50,12 @@
                 Написание своего собственного сайта портфолио
             </li>
         </ul>
+        <h1>Места работы</h1>
+        <p>
+            Учебная стажировка университета ИТМО <br>
+            Пока других мест нет... Жду предложений чтобы пополнить данный список!
+        </p>
+
     </div>
 </div>
 </body>
