--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
                 <a style="text-decoration: none" href=experience.html> Опыт работы</a>
             </li>
             <li>
-                <span style="color: yellow; ">Навыки</span>>
+                <span style="color: yellow; ">Навыки</span>
             </li>
         </ul>
         <div class="icon-navigation">
