--- a/aboutme.html
+++ b/aboutme.html
@@ -29,6 +29,8 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
+            <a href="mailto:fireshowel@gmail.com"><img src="/pict/Other-Mail-Metro-icon%20(1).png"></a>
+            <a href="https://gitlab.com/Destrolaric"><img src=""></a>
         </div>
     </div>
 </header>
@@ -45,6 +47,7 @@
                     факультета информационных технологий университета <strong>ИТМО</strong>. <br>
                     В основном меня привлекает backend разработка, имею несколько учебных проектов на различных языках.
                     Также обладаю некоторыми навыки в frontend разработке<br>
+                    Проживаю в Санкт-Петербурге, работа предпочительно в городе
 
                 </p>
                 <h2>
