--- a/skills.html
+++ b/skills.html
@@ -25,16 +25,18 @@
             </li>
         </ul>
         <div class="icon-navigation">
+
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
+            <a href="mailto:fireshowel@gmail.com"><img src="/pict/Other-Mail-Metro-icon%20(1).png"></a>
         </div>
     </div>
 </header>
 <div class="text-container">
     <div class="text-content">
         <h1>
-            Краткое описаниие моего стэка
+            Краткое описание моего стэка и навыков
         </h1>
         <h2>Разработка</h2>
         <p>
@@ -53,6 +55,10 @@
         <p>
             Писал express сервер на NodeJs. Умею обрабатывать вебхуки и POST запросы. Организовывать локальные сети <br>
             Поднятие хоста сайта и веб приложений на собственном железе. Работа с роутерами и модемами фирмы MIKROTIK
+        </p>
+        <h4>Языки</h4>
+        <p>
+            Родной язык русский, владею английским достаточным для чтения технической документации и использовании в разговорах(Advanced).<br>
         </p>
     </div>
 </div>
