--- a/aboutme.html
+++ b/aboutme.html
@@ -29,8 +29,8 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <a href="mailto:fireshowel@gmail.com"><img src="/pict/Other-Mail-Metro-icon.png"></a>
-            <a href="https://gitlab.com/Destrolaric"><img src=""></a>
+            fireshowel@gmail.com
+
         </div>
     </div>
 </header>
