--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,7 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            fireshowel@gmail.com
+            <span style="color: green; ">fireshowel@gmail.com</span>
         </div>
     </div>
 </header>
