--- a/aboutme.html
+++ b/aboutme.html
@@ -51,12 +51,6 @@
 
                 </p>
                 <h2>
-                    favorite quote
-                </h2>
-                <blockquote>
-                    "Veni, vidi, vici" <cite>Gaius Julius Caesar </cite>
-                </blockquote>
-                <h2>
                     Достижения
                 </h2>
 
@@ -67,29 +61,6 @@
                     <br>
 
                 </p>
-                <ul class="data">
-                    <li>
-                        <h3>
-                            <a style="color: green"> Хорошее</a>
-                        </h3>
-                        <p>
-                            -При необходимости могу работать кранчем<br>
-                            -Быстро обучаемый<br>
-                            -Активный<br>
-                            -За два дня освоился с NodeJs в мере достаточной для написания бота<br>
-                        </p>
-                    </li>
-                    <li>
-                        <h3>
-                            <a style="color: red"> Плохое</a>
-                        </h3>
-                        <p>
-                            -Бываю консервативным в своих решениях<br>
-                            -Зачастую <br>
-                            -Зачастую могу пожертвовать качеством ради скорости<br>
-                        </p>
-                    </li>
-                </ul>
             </li>
             <li>
                 <div class="me-image">
@@ -113,6 +84,30 @@
                 </div>
             </li>
         </ul>
+
+        <ul class="data">
+            <li>
+                <h3>
+                    <a style="color: green"> Хорошее</a>
+                </h3>
+                <p>
+                    -При необходимости могу работать кранчем<br>
+                    -Быстро обучаемый<br>
+                    -Активный<br>
+                </p>
+            </li>
+            <li>
+                <h3>
+                    <a style="color: red"> Плохое</a>
+                </h3>
+                <p>
+                    -Бываю консервативным в своих решениях<br>
+                    -Могу застопориться при выполнение задачи <br>
+                    -Зачастую могу пожертвовать качеством ради скорости<br>
+                </p>
+            </li>
+        </ul>
+
 
     </div>
 </div>
