major design change

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
     <div class="panel">
         <ul class="text-navigation">
             <li>
-                <span style="color: yellow; "> Обо мне </span>
+                <span style=" color: yellow; "> Обо мне </span>
             </li>
             <li>
-                <a style="text-decoration:none" href="experience.html">Опыт работы</a>
+                <a style="text-decoration:none" href="experience.html">Опыт работы и образование</a>
             </li>
             <li>
                 <a style="text-decoration:none" href="skills.html">Навыки</a>
@@ -29,38 +29,41 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: green; ">fireshowel@gmail.com</span>
+            <span style="color: red; ">fireshowel@gmail.com</span>
 
         </div>
     </div>
 </header>
 <div class="text-container">
     <div class="text-content">
+        <h1><strong>ГВИНЕПАДЗЕ ГЕОРГИЙ ПААТАЕВИЧ</strong></h1>
+        <p>Гражданин России, Санкт-Петербург</p>
         <ul class="about_content">
-
             <li>
-                <h1>
-                    Обо мне
-                </h1>
-                <p>
-                    Меня зовут Гвинепадзе Георгий Паатаевич, на данный момент являюсь студентом третьего курса
-                    факультета информационных технологий университета <strong>ИТМО</strong>. <br>
-                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных языках.
-                    Также обладаю некоторыми навыки в frontend разработке<br>
-                    Проживаю в Санкт-Петербурге, работа предпочительно в городе
-
-                </p>
                 <h2>
-                    Достижения
+                    Обо мне
                 </h2>
-
                 <p>
-                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>
-                    -Работал с различными сетевыми задачами<br>
-                    -Работал с QT<br>
-                    <br>
-
+                    На данный момент являюсь студентом третьего курса факультета информационных технологий университета <strong>ИТМО</strong>. <br>
+                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных языках.<br>
+                    Также обладаю некоторыми навыки в frontend разработке<br>
+                    Проживаю в Санкт-Петербурге, работа предпочительно в городе.<br>
                 </p>
+                <h3>Предпочтительная должность и зарплата</h3>
+                <p>
+                    Желаю получить стажировку в backend разработке<br>
+                    Предпочтительный стэк - C++, Java <br>
+                    На данный момент принимаю только предложение стажировок <br></p>
+<!--                <h2>-->
+<!--                    Достижения-->
+<!--                </h2>-->
+<!--                <p>-->
+<!--                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>-->
+<!--                    -Работал с различными сетевыми задачами<br>-->
+<!--                    -Работал с QT<br>-->
+<!--                    <br>-->
+                <h3>Хобби и интересы</h3>
+                <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
             </li>
             <li>
                 <div class="me-image">
@@ -85,28 +88,28 @@
             </li>
         </ul>
 
-        <ul class="data">
-            <li>
-                <h3>
-                    <a style="color: green"> Хорошее</a>
-                </h3>
-                <p>
-                    -При необходимости могу работать кранчем<br>
-                    -Быстро обучаемый<br>
-                    -Активный<br>
-                </p>
-            </li>
-            <li>
-                <h3>
-                    <a style="color: red"> Плохое</a>
-                </h3>
-                <p>
-                    -Бываю консервативным в своих решениях<br>
-                    -Могу застопориться при выполнение задачи <br>
-                    -Зачастую могу пожертвовать качеством ради скорости<br>
-                </p>
-            </li>
-        </ul>
+<!--        <ul class="data">-->
+<!--            <li>-->
+<!--                <h3>-->
+<!--                    <a style="color: green"> Хорошее</a>-->
+<!--                </h3>-->
+<!--                <p>-->
+<!--                    -При необходимости могу работать кранчем<br>-->
+<!--                    -Быстро обучаемый<br>-->
+<!--                    -Активный<br>-->
+<!--                </p>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <h3>-->
+<!--                    <a style="color: red"> Плохое</a>-->
+<!--                </h3>-->
+<!--                <p>-->
+<!--                    -Бываю консервативным в своих решениях<br>-->
+<!--                    -Могу застопориться при выполнение задачи <br>-->
+<!--                    -Зачастую могу пожертвовать качеством ради скорости<br>-->
+<!--                </p>-->
+<!--            </li>-->
+<!--        </ul>-->
 
 
     </div>
