--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
                 <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
             </li>
             <li>
-                <span style="color: yellow; ">Опыт работы</span>
+                <span style="color: yellow; ">Опыт работы и образование</span>
             </li>
             <li>
                 <a style="text-decoration:none" href="skills.html">Навыки</a>
@@ -29,15 +29,22 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: green; ">fireshowel@gmail.com</span>
+            <span style="color: red; ">fireshowel@gmail.com</span>
 
         </div>
     </div>
 </header>
 <div class="text-container">
     <div class="text-content">
-
-        <h1>Примерный список проектов с которыми я работал</h1>
+        <h1>
+            Образование
+        </h1>
+        <p>
+            Студент третьего курса факультета программирования и информационных технологий <br>
+            Направление "Программирование и интернет технологии"
+        </p>
+        <h2>Опыт</h2>
+        <h3>Примерный список проектов с которыми я работал</h3>
         <ul class="List">
             <li>
                 Разработка бота нотификаций Trello-> Telegram
@@ -52,7 +59,7 @@
                 Написание своего собственного сайта портфолио
             </li>
         </ul>
-        <h1>Места работы</h1>
+        <h2>Места работы</h2>
         <p>
             Учебная стажировка университета ИТМО <br>
             Пока других мест нет... Жду предложений чтобы пополнить данный список!
