--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
                 <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
             </li>
             <li>
-                <a style="text-decoration: none" href=experience.html> Опыт работы</a>
+                <a style="text-decoration: none" href=experience.html> Опыт работы и образование</a>
             </li>
             <li>
                 <span style="color: yellow; ">Навыки</span>
@@ -29,7 +29,7 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: green; ">fireshowel@gmail.com</span>
+            <span style="color: red; ">fireshowel@gmail.com</span>
         </div>
     </div>
 </header>
@@ -38,14 +38,14 @@
         <h1>
             Краткое описание моего стэка и навыков
         </h1>
-        <h2>Разработка</h2>
+        <h3>Разработка</h3>
         <p>
             На данный момент обладаю навыками написания кода на C#, C++, Java и Python. Имею познания в работе с
             Powershell и Bash.<br>
             Работал с NodeJS. Из фреймворков имел опыт работы с QT и WindowsForms.<br>
-            Умею работать с Github, Настраивал Пайпы Gitlab. Работал с системой Git.<br>
+            Умею работать с Github, Настраивал Ci/Cd Gitlab. Работал с системой Git.<br>
         </p>
-        <h2>OS</h2>
+        <h3>Операционные системы</h3>
         <p>
             Обладаю навыками работы с OS Windows, Linux. Понимаю принципы строения файлововых систем. <br>
             работал с AD, организовывал локальные сети компьютеров и DNS сервер в Windows Server <br>\
@@ -56,7 +56,7 @@
             Писал express сервер на NodeJs. Умею обрабатывать вебхуки и POST запросы. Организовывать локальные сети <br>
             Поднятие хоста сайта и веб приложений на собственном железе. Работа с роутерами и модемами фирмы MIKROTIK
         </p>
-        <h4>Языки</h4>
+        <h3>Языки</h3>
         <p>
             Родной язык русский, владею английским достаточным для чтения технической документации и использовании в разговорах(Advanced).<br>
         </p>
