Change in design

--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@
 <div class="text-container">
     <div class="text-content">
         <h1><strong>ГВИНЕПАДЗЕ ГЕОРГИЙ ПААТАЕВИЧ</strong></h1>
-        <p>Гражданин России, Санкт-Петербург</p>
+        <h2>Гражданин России, Санкт-Петербург</h2>
         <ul class="about_content">
             <li>
                 <h2>
