Huge background pic change,

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="/style.css"/>
-
 </head>
 
 
@@ -16,7 +15,7 @@
     <div class="panel">
         <ul class="text-navigation">
             <li>
-                <span style=" color: yellow; "> Обо мне </span>
+                <span style=" color: darkblue; "> Обо мне </span>
             </li>
             <li>
                 <a style="text-decoration:none" href="experience.html">Опыт работы и образование</a>
@@ -29,7 +28,7 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: red; ">fireshowel@gmail.com</span>
+            <span style="color: black; ">fireshowel@gmail.com</span>
 
         </div>
     </div>
