--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
                 <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
             </li>
             <li>
-                <span style="color: yellow; ">Опыт работы и образование</span>
+                <span style="color: darkblue; ">Опыт работы и образование</span>
             </li>
             <li>
                 <a style="text-decoration:none" href="skills.html">Навыки</a>
@@ -29,7 +29,7 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: red; ">fireshowel@gmail.com</span>
+            <span style="color: black; ">fireshowel@gmail.com</span>
 
         </div>
     </div>
