--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
                 <a style="text-decoration: none" href=experience.html> Опыт работы и образование</a>
             </li>
             <li>
-                <span style="color: yellow; ">Навыки</span>
+                <span style="color: darkblue; ">Навыки</span>
             </li>
         </ul>
         <div class="icon-navigation">
@@ -29,7 +29,7 @@
             <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
             <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
             <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: red; ">fireshowel@gmail.com</span>
+            <span style="color: black; ">fireshowel@gmail.com</span>
         </div>
     </div>
 </header>
