--- a/experience.html
+++ b/experience.html
@@ -13,25 +13,29 @@
 
 <body>
 <header>
-    <div class="panel">
-        <ul class="text-navigation">
-            <li>
-                <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
-            </li>
-            <li>
-                <span style="color: darkblue; ">Опыт работы и образование</span>
-            </li>
-            <li>
-                <a style="text-decoration:none" href="skills.html">Навыки</a>
-            </li>
-        </ul>
-        <div class="icon-navigation">
-            <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
-            <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
-            <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: black; ">fireshowel@gmail.com</span>
+    <ul class="panel">
+        <li>
+            <div class="icon-navigation">
+                <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
+                <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
+                <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
+            </div>
+        </li>
+        <li>
+            <ul class="text-navigation">
+                <li>
+                    <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
+                </li>
+                <li>
+                    <span style="color: darkblue; ">Опыт работы и образование</span>
+                </li>
+                <li>
+                    <a style="text-decoration:none" href="skills.html">Навыки</a>
+                </li>
+            </ul>
+        </li>
 
-        </div>
+    </ul>
     </div>
 </header>
 <div class="text-container">
@@ -66,6 +70,9 @@
         </p>
 
     </div>
+</div>
+<div class="email">
+    <span style="color: black; ">fireshowel@gmail.com</span>
 </div>
 </body>
 </html>
