--- a/skills.html
+++ b/skills.html
@@ -12,26 +12,30 @@
 
 <body>
 <header>
-    <div class="panel">
-        <ul class="text-navigation">
-            <li>
-                <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
-            </li>
-            <li>
-                <a style="text-decoration: none" href=experience.html> Опыт работы и образование</a>
-            </li>
-            <li>
-                <span style="color: darkblue; ">Навыки</span>
-            </li>
-        </ul>
-        <div class="icon-navigation">
+    <ul class="panel">
+        <li>
+            <div class="icon-navigation">
 
-            <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
-            <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
-            <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: black; ">fireshowel@gmail.com</span>
-        </div>
-    </div>
+                <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
+                <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
+                <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
+            </div>
+        </li>
+        <li>
+            <ul class="text-navigation">
+                <li>
+                    <a style="text-decoration:none" href="aboutme.html"> Обо мне</a>
+                </li>
+                <li>
+                    <a style="text-decoration: none" href=experience.html> Опыт работы и образование</a>
+                </li>
+                <li>
+                    <span style="color: darkblue; ">Навыки</span>
+                </li>
+            </ul>
+        </li>
+
+    </ul>
 </header>
 <div class="text-container">
     <div class="text-content">
@@ -58,9 +62,13 @@
         </p>
         <h3>Языки</h3>
         <p>
-            Родной язык русский, владею английским достаточным для чтения технической документации и использовании в разговорах(Advanced).<br>
+            Родной язык русский, владею английским достаточным для чтения технической документации и использовании в
+            разговорах(Advanced).<br>
         </p>
     </div>
+</div>
+<div class="email">
+    <span style="color: black; ">fireshowel@gmail.com</span>
 </div>
 </body>
 </html>
