--- a/aboutme.html
+++ b/aboutme.html
@@ -13,26 +13,29 @@
 
 <body>
 <header>
-    <div class="panel">
-        <ul class="text-navigation">
-            <li>
-                <span style=" color: darkblue; "> Обо мне </span>
-            </li>
-            <li>
-                <a style="text-decoration:none" href="experience.html">Опыт работы и образование</a>
-            </li>
-            <li>
-                <a style="text-decoration:none" href="skills.html">Навыки</a>
-            </li>
-        </ul>
-        <div class="icon-navigation">
-            <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
-            <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
-            <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
-            <span style="color: black; ">fireshowel@gmail.com</span>
+    <ul class="panel">
+        <li>
+            <div class="icon-navigation">
+                <a href="https://vk.com/delete0your0page"><img src="/pict/vk_icon-icons%201.png"></a>
+                <a href="https://github.com/Destrolaric"><img src="/pict/GitHub-Mark-32px%201.png"></a>
+                <a href="https://t.me/Zestaras"><img src="/pict/telegram_icon-icons%201.png"></a>
+            </div>
+        </li>
+        <li>
+            <ul class="text-navigation">
+                <li>
+                    <span style=" color: darkblue; "> Обо мне </span>
+                </li>
+                <li>
+                    <a style="text-decoration:none" href="experience.html">Опыт работы и образование</a>
+                </li>
+                <li>
+                    <a style="text-decoration:none" href="skills.html">Навыки</a>
+                </li>
+            </ul>
+        </li>
 
-        </div>
-    </div>
+    </ul>
 </header>
 <div class="text-container">
     <div class="text-content">
@@ -44,8 +47,10 @@
                     Обо мне
                 </h2>
                 <p>
-                    На данный момент являюсь студентом третьего курса факультета информационных технологий университета <strong>ИТМО</strong>. <br>
-                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных языках.<br>
+                    На данный момент являюсь студентом третьего курса факультета информационных технологий университета
+                    <strong>ИТМО</strong>. <br>
+                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных
+                    языках.<br>
                     Также обладаю некоторыми навыки в frontend разработке<br>
                     Проживаю в Санкт-Петербурге, работа предпочительно в городе.<br>
                 </p>
@@ -54,14 +59,14 @@
                     Желаю получить стажировку в backend разработке<br>
                     Предпочтительный стэк - C++, Java <br>
                     На данный момент принимаю только предложение стажировок <br></p>
-<!--                <h2>-->
-<!--                    Достижения-->
-<!--                </h2>-->
-<!--                <p>-->
-<!--                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>-->
-<!--                    -Работал с различными сетевыми задачами<br>-->
-<!--                    -Работал с QT<br>-->
-<!--                    <br>-->
+                <!--                <h2>-->
+                <!--                    Достижения-->
+                <!--                </h2>-->
+                <!--                <p>-->
+                <!--                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>-->
+                <!--                    -Работал с различными сетевыми задачами<br>-->
+                <!--                    -Работал с QT<br>-->
+                <!--                    <br>-->
                 <h3>Хобби и интересы</h3>
                 <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
             </li>
@@ -88,31 +93,33 @@
             </li>
         </ul>
 
-<!--        <ul class="data">-->
-<!--            <li>-->
-<!--                <h3>-->
-<!--                    <a style="color: green"> Хорошее</a>-->
-<!--                </h3>-->
-<!--                <p>-->
-<!--                    -При необходимости могу работать кранчем<br>-->
-<!--                    -Быстро обучаемый<br>-->
-<!--                    -Активный<br>-->
-<!--                </p>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <h3>-->
-<!--                    <a style="color: red"> Плохое</a>-->
-<!--                </h3>-->
-<!--                <p>-->
-<!--                    -Бываю консервативным в своих решениях<br>-->
-<!--                    -Могу застопориться при выполнение задачи <br>-->
-<!--                    -Зачастую могу пожертвовать качеством ради скорости<br>-->
-<!--                </p>-->
-<!--            </li>-->
-<!--        </ul>-->
-
+        <!--        <ul class="data">-->
+        <!--            <li>-->
+        <!--                <h3>-->
+        <!--                    <a style="color: green"> Хорошее</a>-->
+        <!--                </h3>-->
+        <!--                <p>-->
+        <!--                    -При необходимости могу работать кранчем<br>-->
+        <!--                    -Быстро обучаемый<br>-->
+        <!--                    -Активный<br>-->
+        <!--                </p>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--                <h3>-->
+        <!--                    <a style="color: red"> Плохое</a>-->
+        <!--                </h3>-->
+        <!--                <p>-->
+        <!--                    -Бываю консервативным в своих решениях<br>-->
+        <!--                    -Могу застопориться при выполнение задачи <br>-->
+        <!--                    -Зачастую могу пожертвовать качеством ради скорости<br>-->
+        <!--                </p>-->
+        <!--            </li>-->
+        <!--        </ul>-->
 
     </div>
+</div>
+<div class="email">
+    <span style="color: black; ">fireshowel@gmail.com</span>
 </div>
 </body>
 </html>
