--- a/aboutme.html
+++ b/aboutme.html
@@ -36,6 +36,9 @@
         </li>
 
     </ul>
+    <div class="email">
+        <span style="color: black; ">fireshowel@gmail.com</span>
+    </div>
 </header>
 <div class="text-container">
     <div class="text-content">
@@ -57,16 +60,9 @@
                 <h3>Предпочтительная должность и зарплата</h3>
                 <p>
                     Желаю получить стажировку в backend разработке<br>
-                    Предпочтительный стэк - C++, Java <br>
-                    На данный момент принимаю только предложение стажировок <br></p>
-                <!--                <h2>-->
-                <!--                    Достижения-->
-                <!--                </h2>-->
-                <!--                <p>-->
-                <!--                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>-->
-                <!--                    -Работал с различными сетевыми задачами<br>-->
-                <!--                    -Работал с QT<br>-->
-                <!--                    <br>-->
+                    Предпочтительный стэк - C++, Java.
+                    На данный момент принимаю только предложение стажировок
+                </p>
                 <h3>Хобби и интересы</h3>
                 <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
             </li>
@@ -118,8 +114,6 @@
 
     </div>
 </div>
-<div class="email">
-    <span style="color: black; ">fireshowel@gmail.com</span>
-</div>
+
 </body>
 </html>
