--- a/experience.html
+++ b/experience.html
@@ -36,8 +36,6 @@
         </li>
 
     </ul>
-    <div class="email">
-        <span style="color: black; ">fireshowel@gmail.com</span>
     </div>
 </header>
 <div class="text-container">
@@ -73,6 +71,8 @@
 
     </div>
 </div>
-
+<div class="email">
+    <span style="color: black; ">fireshowel@gmail.com</span>
+</div>
 </body>
 </html>
