fixed broken .idea and minor changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -61,15 +61,7 @@
                 <p>
                     Желаю получить стажировку в backend разработке<br>
                     Предпочтительный стэк - C++, Java <br>
-                    На данный момент принимаю только предложение стажировок <br></p>
-                <!--                <h2>-->
-                <!--                    Достижения-->
-                <!--                </h2>-->
-                <!--                <p>-->
-                <!--                    -Имею хорошо настроенный домашний Linux, знаю принципы работы <br>-->
-                <!--                    -Работал с различными сетевыми задачами<br>-->
-                <!--                    -Работал с QT<br>-->
-                <!--                    <br>-->
+                    На данный момент принимаю только предложения стажировок <br></p>
                 <h3>Хобби и интересы</h3>
                 <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
             </li>
@@ -95,30 +87,6 @@
                 </div>
             </li>
         </ul>
-
-        <!--        <ul class="data">-->
-        <!--            <li>-->
-        <!--                <h3>-->
-        <!--                    <a style="color: green"> Хорошее</a>-->
-        <!--                </h3>-->
-        <!--                <p>-->
-        <!--                    -При необходимости могу работать кранчем<br>-->
-        <!--                    -Быстро обучаемый<br>-->
-        <!--                    -Активный<br>-->
-        <!--                </p>-->
-        <!--            </li>-->
-        <!--            <li>-->
-        <!--                <h3>-->
-        <!--                    <a style="color: red"> Плохое</a>-->
-        <!--                </h3>-->
-        <!--                <p>-->
-        <!--                    -Бываю консервативным в своих решениях<br>-->
-        <!--                    -Могу застопориться при выполнение задачи <br>-->
-        <!--                    -Зачастую могу пожертвовать качеством ради скорости<br>-->
-        <!--                </p>-->
-        <!--            </li>-->
-        <!--        </ul>-->
-
     </div>
 </div>
 
