--- a/experience.html
+++ b/experience.html
@@ -59,11 +59,12 @@
                 Разработка графического калькулятора на QT
             </li>
             <li>
-                Совместная работа над плагином для Idea
+                Совместная работа над плагином для IDEA
             </li>
             <li>
                 Написание своего собственного сайта портфолио
             </li>
+
         </ul>
         <h2>Места работы</h2>
         <p>
