--- a/skills.html
+++ b/skills.html
@@ -43,19 +43,19 @@
 <div class="text-container">
     <div class="text-content">
         <h1>
-            Краткое описание моего стэка и навыков
+            Краткое описание моих знаний и навыков
         </h1>
         <h3>Разработка</h3>
         <p>
-            На данный момент обладаю навыками написания кода на C#, C++, Java и Python. Имею познания в работе с
+            На данный момент обладаю навыками написания кода на C#, C++, Java и Python. Имею знания в работе с
             Powershell и Bash.<br>
             Работал с NodeJS. Из фреймворков имел опыт работы с QT и WindowsForms.<br>
-            Умею работать с Github, Настраивал Ci/Cd Gitlab. Работал с системой Git.<br>
+            Умею работать с Github, Настраивал CI/CD Gitlab. Работал с системой Git.<br>
         </p>
         <h3>Операционные системы</h3>
         <p>
             Обладаю навыками работы с OS Windows, Linux. Понимаю принципы строения файлововых систем. <br>
-            работал с AD, организовывал локальные сети компьютеров и DNS сервер в Windows Server <br>\
+            работал с AD, организовывал локальные сети компьютеров и DNS сервер в Windows Server <br>
             Умею работать с виртуальными машинами VirtualBox <br>
         </p>
         <h3>Сеть</h3>
