--- a/aboutme.html
+++ b/aboutme.html
@@ -44,49 +44,25 @@
     <div class="text-content">
         <h1><strong>ГВИНЕПАДЗЕ ГЕОРГИЙ ПААТАЕВИЧ</strong></h1>
         <h2>Гражданин России, Санкт-Петербург</h2>
-        <ul class="about_content">
-            <li>
-                <h2>
-                    Обо мне
-                </h2>
-                <p>
-                    На данный момент являюсь студентом третьего курса факультета информационных технологий университета
-                    <strong>ИТМО</strong>. <br>
-                    В основном меня привлекает backend разработка, имею несколько учебных проектов на различных
-                    языках.<br>
-                    Также обладаю некоторыми навыки в frontend разработке<br>
-                    Проживаю в Санкт-Петербурге, работа предпочительно в городе.<br>
-                </p>
-                <h3>Предпочтительная должность и зарплата</h3>
-                <p>
-                    Желаю получить стажировку в backend разработке<br>
-                    Предпочтительный стэк - C++, Java <br>
-                    На данный момент принимаю только предложения стажировок <br></p>
-                <h3>Хобби и интересы</h3>
-                <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
-            </li>
-            <li>
-                <div class="me-image">
-                    <div class="ascii-hamster">
-                    <pre>
-.     .
-(>\---/<)
-,'     `.
-/  q   p  \
-(  >(_Y_)<  )
->-' `-' `-<-.
-/  _.== ,=.,- \
-/,    )`  '(    )
-; `._.'      `--<
-:     \        |  )
-\      )       ;_/
-`._ _/_  ___.'-\\\
-                    `--\\\
-                    </pre>
-                    </div>
-                </div>
-            </li>
-        </ul>
+        <h2>
+            Обо мне
+        </h2>
+        <p><img src="/pict/No_Picture.jpg">
+            На данный момент являюсь студентом третьего курса факультета информационных технологий университета
+            <strong>ИТМО</strong>. <br>
+            В основном меня привлекает backend разработка, имею несколько учебных проектов на различных
+            языках.<br>
+            Также обладаю некоторыми навыки в frontend разработке<br>
+            Проживаю в Санкт-Петербурге, работа предпочительно в городе.<br>
+        </p>
+        <h3>Предпочтительная должность и зарплата</h3>
+        <p>
+            Желаю получить стажировку в backend разработке<br>
+            Предпочтительный стэк - C++, Java <br>
+            На данный момент принимаю только предложения стажировок <br></p>
+        <h3>Хобби и интересы</h3>
+        <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
+
     </div>
 </div>
 
